--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-
-<html lang="en".
-      <head>
-          <meta charset="utf-8"/>
-          <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-          <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-          <title> Flask Authentication</title>
-      </head>
-      <body><header>Auth-Testing</header>
-    {% block body %}
-    {% endblock %}
-      </body>
-
-
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/auth_raw.css') }}">
+</head>
+<body>
+    {% block body %}{% endblock %}
+</body>
+</html>
