--- a/templates/rewards_raw.html
+++ b/templates/rewards_raw.html
@@ -14,7 +14,7 @@
 
     <nav class="nav">
       <button class="nav-btn" onclick="window.location.href='stars'">Stars</button>
-      <button class="nav-btn">Missions</button>
+      <button class="nav-btn" onclick="window.location.href='locations'">Locations</button>
       <button class="nav-btn nav-btn-active">Rewards</button>
       <button class="nav-btn" onclick="window.location.href='logout'">Logout</button>
     </nav>
