--- a/static/css/stars.css
+++ b/static/css/stars.css
@@ -83,6 +83,7 @@
 	justify-content: center;
 	align-items: center;
 	margin-left: 20px;
+	position: relative;
 }
 
 .box3{
@@ -129,15 +130,23 @@ stroke-width: 2;
 }
 
 #starAmount{
-position: absolute;
+position: relative;
 z-index: 100;
 }
 
 body {
-  margin: 0;
-  font-family: system-ui, sans-serif;
   background: #ffffff;
   color: #111827;
-  display: grid;
 }
+
+.box1, .box2, .box3 {
+  margin: 20px 0;
+}
+
+.box1_inner,
+.box2_inner,
+.box3_inner {
+  overflow: visible;
+}
+
 
